--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.7.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4"
   },
